--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "gray-matter": "^4.0.3",
+    "hls.js": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
